# task-planner

./: .gitignore  Day.py  Hour.py  Makefile  README.md  TODO  Task.py  console_main.py  debug.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  example.txt  input.txt  main.py  planner_result.txt  pyproject.toml  requirements.txt  tasks.txt
alembic/: env.py
api_service/: pyproject.toml
console_app/: tasks.txt
data_files/: days.txt  tasks.txt  tasks2.txt  tasks3.txt  tasks6.txt
fluentd/: Dockerfile  fluentd.conf  fluentd2.conf
src/: config.py  database.py  main.py  security.py
task_planner/: calendar.py  day.py  planner.py
tasks_allocation_package/: classes.py  (+2 more)
web/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  start.py
web/alembic/: env.py
web/alembic/versions/: da692a350960_add_cascade_attributes_and_passive_.py
web/app/: database.py  main.py  security.py
web/app/api/: __init__.py  dependencies.py
web/app/api/v1/: __init__.py  auth.py  day.py  manual_day.py  planner.py  task.py  task_execution.py  user.py
web/app/api/v2/: __init__.py  admin.py  auth.py  logger_check.py  manual_day.py  planner.py  task.py  user.py
web/app/core/: config.py  database.py  dependencies.py  log.py  middleware.py  security.py
web/app/crud/: __init__.py  base.py  day.py  failed_task.py  manual_day.py  task.py  task_execution.py  user.py
web/app/models/: __init__.py  day.py  failed_task.py  manual_day.py  task.py  task_execution.py  user.py
web/app/schemas/: __init__.py  admin.py  auth.py  day.py  failed_task.py  manual_day.py  task.py  task_execution.py  user.py
web/console_app/: planner_result.txt
web/task_planner/: __init__.py  planner.py  task.py  utils.py
web/tests/: conftest.py
web/tests/unit_tests/: test_security.py  test_task_crud.py  test_user_crud.py
(+106 files in other folders)
