[tool.poetry]
name = "task-planner"
version = "0.6.0"
description = "Core library for task planning logic"
authors = ["chpdd <chupilko_dd@gmail.com>"]
readme = "README.md"
packages = [{include = "task_planner", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
